tree-sitter-ilk-kli/test/corpus/kli_basics.txt
================================================================================
Simple binding
================================================================================

tag = Parametrized {userId String}

--------------------------------------------------------------------------------

(source_file
  (binding (identifier) (type_identifier) (struct_value (value_field_list (value_field (identifier) (type_ref))))))

================================================================================
Binding with literal
================================================================================

simpleTag = Unique "simple-tag"

--------------------------------------------------------------------------------

(source_file
  (binding (identifier) (type_identifier) (literal_value (string))))

================================================================================
Binding with associations
================================================================================

userRegistered = Event<userIdTag, commonTag> {
    id String
    name String
}

--------------------------------------------------------------------------------

(source_file
  (binding
    (identifier)
    (type_identifier)
    (assoc_list (identifier) (identifier))
    (struct_value (value_field_list
      (value_field (identifier) (type_ref))
      (value_field (identifier) (type_ref))))))

================================================================================
Field origins - generated
================================================================================

event = Event {
    timestamp Int*
}

--------------------------------------------------------------------------------

(source_file
  (binding (identifier) (type_identifier) (struct_value (value_field_list
    (value_field (identifier) (type_ref) (field_origin))))))

================================================================================
Field origins - mapped
================================================================================

event = Event {
    customerId Uuid = fields.userId
}

--------------------------------------------------------------------------------

(source_file
  (binding (identifier) (type_identifier) (struct_value (value_field_list
    (value_field (identifier) (type_ref) (field_origin (origin_path (identifier) (identifier))))))))

================================================================================
Field origins - computed
================================================================================

event = Event {
    total Int = compute(fields.qty, fields.price)
}

--------------------------------------------------------------------------------

(source_file
  (binding (identifier) (type_identifier) (struct_value (value_field_list
    (value_field (identifier) (type_ref) (field_origin (origin_paths (origin_path (identifier) (identifier)) (origin_path (identifier) (identifier)))))))))

================================================================================
Optional fields
================================================================================

event = Event {
    email? String
}

--------------------------------------------------------------------------------

(source_file
  (binding (identifier) (type_identifier) (struct_value (value_field_list
    (value_field (identifier) (type_ref))))))

================================================================================
List values
================================================================================

cmd = Command {
    emits [userRegistered, other]
}

--------------------------------------------------------------------------------

(source_file
  (binding (identifier) (type_identifier) (struct_value (value_field_list
    (value_field (identifier) (list_value (list_elements (list_element (binding_ref (identifier))) (list_element (binding_ref (identifier))))))))))

================================================================================
Inline refinements
================================================================================

cmd = Command {
    emits [userRegistered & {
        timestamp Int*
    }]
}

--------------------------------------------------------------------------------

(source_file
  (binding (identifier) (type_identifier) (struct_value (value_field_list
    (value_field (identifier) (list_value (list_elements
      (list_element (identifier) (struct_value (value_field_list
        (value_field (identifier) (type_ref) (field_origin))))))))))))

================================================================================
Doc annotations
================================================================================

@doc "Implementation hint"
total = Event {
    @doc "multiply qty * price"
    amount Int = compute(fields.qty, fields.price)
}

--------------------------------------------------------------------------------

(source_file
  (binding (string) (identifier) (type_identifier) (struct_value (value_field_list
    (value_field (string) (identifier) (type_ref) (field_origin (origin_paths (origin_path (identifier) (identifier)) (origin_path (identifier) (identifier)))))))))
